style.css
.border-test {
  border: 1px dotted red; /* temporary border toggled using jQuery */
}

html {
  font-family: 'Noto Sans', sans-serif;
  background: linear-gradient(to bottom, white, rgb(203, 202, 217));
}

a:link {
  text-decoration: none;
  color: rgb(64, 37, 226);
}

a:visited {
  color: rgb(232, 44, 219);
}

a:hover {
  color: red;
  font-style: italic;
}

#header {
  border: 1px solid transparent;
  border-radius: 5px;
  margin-top: 40px;
}

h1 {
  font-family: 'Montserrat', cursive;
  font-size: 44px;
  padding-left: 10px;
}

@media screen and (max-width: 800px) { /* for smartphones and tablets */
  h1 {
    margin: auto;
    /*width: 100px;*/
    text-align: center;
  }

}

/*@media screen and (max-width: 500px) {
  #header h1 {float: none;}
  #header h1 {text-align: center; padding-left: 0px;}
}

@media screen and (min-width: 501px) and (max-width: 800px) {
  #header h1 {float: none; text-align: center;}
  #header {margin-bottom: 100px;}
}*/

/*#header h1 a {
  color: black;
  font-style: normal;
}*/

#footer {
  border: 1px solid black;
  border-radius: 5px;
  text-align: center;
  margin-top: 70px;
}

#footer p {
  display: inline;
  text-align: center;
  margin-left: 50px;
  padding-top: 60px;
}

/*@media screen and (max-width: 500px) {
  #footer {clear: both; text-align: left;}
  #footer p {margin-right: 40px;}
}

@media screen and (min-width: 501px) and (max-width: 800px) {
  #footer {clear: both;}
  #footer p {margin-right: 40px;}
}*/

.nav-bar-top {
  display: flex;
  /*margin: 50px 60px 0px 0px;*/
  margin: 0 auto;
  text-align: right;
  max-width: 600px;
}

.dropdown { /* each dropdown item */
  position: relative;
  display: inline-block;
  margin-left: 20px;
  margin-right: 20px;
  font-size: 15px;
  color: black;
  text-align: center;
}

.dropdown:hover {
  border: 1px solid rgb(185, 200, 186);
  border-radius: 5px;
  padding: 5px;
  color: rgb(22, 47, 212);
  font-style: italic;
}

.dropdown a:link {
  color: black !important;
}

.dropdown a:hover {
  color: rgb(22, 47, 212) !important;
}

.dropdown-content { /* the content of dropdown menus that displays on hover */
  position: absolute;
  z-index: 1;
  border: 1px solid rgb(185, 200, 186);
  border-radius: 5px;
  padding: 10px 5px 10px 5px;
  min-width: 200px;
  background-color: white;
  right: -73px;
  top: 30px;
}

.dropdown-content a {
  display: block;
  margin: 10px 0px 5px 0px;
}

@media screen and (max-width: 800px) { /* for smartphones and tablets */
  .nav-bar-top {
    display: block;
  }
  .dropdown {
    background-color: white;
    border: 1px solid black;
    display: block;
    font-size: 30px;
    margin-top: 20px;
  }
  .dropdown-content {
    border: 1px solid black;
    position: relative;
    right: 0px;
  }
}

.home {
  background-color: blue !important;
}

.home a {
  color: white !important;
}

.home a:hover {
  color: white !important;
}

@media screen and (max-width: 800px) {
  .photos-home-main {display: inline; padding-left: 10px;}
  .photos-home-main img {max-width: 150px; margin-top: 120px;}
  /*#um {padding-left: 40px;}
  #cover {padding-left: 120px;}*/
}

/*@media screen and (max-width: 500px) {
  .nav-bar-top {margin-bottom: 50px;}
  .dropdown {display: block; border: 1px solid black; font-size: 30px; margin-top: 20px; text-align: center; background-color: rgb(224, 225, 240)}
}*/

.photos-home-main {
  border: 1px solid transparent;
  display: block;
  margin: 80px auto;
  text-align: center;
}

.photos-home-main img {
  padding-right: 5px;
  padding-left: 0px;
}

/*@media screen and (max-width: 500px) {
  .photos-home-main {display: inline; padding-left: 10px;}
  .photos-home-main img {max-width: 150px;}
} */



.home-blurb {
  position: relative;
  max-width: 950px;
  margin: auto;
}

.home-blurb img {
  height: 300px;
}

.home-blurb p {
  /*float: right;*/
  position: absolute;
  left: 310px;
  top: -24px;
  width: 650px;
}

.home-blurb p::first-letter {
  font-weight: bold;
  font-size: 24px;
}

/*@media screen and (max-width: 500px) {
  .home-blurb {position: relative; left: -40px;}
  .home-blurb p {width: 300px; text-align: center;}
  .home-blurb img {display: none;}
}

@media screen and (min-width: 501px) and (max-width: 800px) {
  .home-blurb p {width: 300px; float: none; text-align: center; margin-left: 150px;}
  .home-blurb img {display: none;}
}*/

#new-cairn {
  color: red;
}

